[gd_scene load_steps=3 format=3 uid="uid://dcenmv4de8uq3"]

[ext_resource type="Script" uid="uid://lvd6vpe67xn2" path="res://common/pause_menu.gd" id="1_hhokr"]
[ext_resource type="FontFile" uid="uid://dasrxrrurr323" path="res://resources/fonts/Kenney Pixel Square.ttf" id="2_jibdd"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_hhokr")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.78431374)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jibdd")
text = "RESUME"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jibdd")
text = "RESTART"

[node name="MapButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jibdd")
text = "MAP"

[node name="SaveButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jibdd")
text = "SAVE"

[node name="EndButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jibdd")
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="toggle_pause"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MapButton" to="." method="_on_map_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/EndButton" to="." method="_on_end_button_pressed"]
